--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
 [slack]
 token={your slack token or bot token}
 room={room name that you want to nortificate like general}
-status={status emoji name that you want to notify change}
-message_format_on={bot message without user name when status set}
+status_start={start status emoji name that you want to notify change}
+status_end={end status emoji name that you want to notify change}
+message_format_start={bot message without user name when start status set}
+message_format_end={bot message without user name when end status set}
 # if logging to file, please remove following comment out
 # log_output=logs/application.log
