トークンを2つに分解

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [slack]
-token={your slack token or bot token}
+slack_token={slack token}
+bot_token={bot token}
 room={room name that you want to nortificate like general}
 status_start={start status emoji name that you want to notify change}
 status_end={end status emoji name that you want to notify change}
